--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -7,8 +7,11 @@
 
 # The following line activates a set of recommended lints for Flutter apps,
 # packages, and plugins designed to encourage good coding practices.
-include: package:flutter_lints/flutter.yaml
-
+analyzer:
+  errors:
+    always_use_package_imports: ignore
+    prefer_single_quotes: ignore
+include: package:very_good_analysis/analysis_options.yaml
 linter:
   # The lint rules applied to this project can be customized in the
   # section below to disable rules from the `package:flutter_lints/flutter.yaml`
