--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -11,6 +11,7 @@ analyzer:
   errors:
     always_use_package_imports: ignore
     prefer_single_quotes: ignore
+    use_string_in_part_of_directives: ignore
 include: package:very_good_analysis/analysis_options.yaml
 linter:
   # The lint rules applied to this project can be customized in the
