--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -10,6 +10,7 @@
 analyzer:
   errors:
     always_use_package_imports: ignore
+    lines_longer_than_80_chars: ignore
     prefer_single_quotes: ignore
     use_string_in_part_of_directives: ignore
 include: package:very_good_analysis/analysis_options.yaml
