--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,7 +58,10 @@ dependencies:
   cached_network_image: ^3.4.1
   # for localizations -> https://pub.dev/packages/easy_localization
   easy_localization: ^3.0.7
-
+  equatable: ^2.0.7
+  mockito: ^5.4.4
+  firebase_auth_mocks: ^0.14.1
+  
 
 dev_dependencies:
   flutter_lints: ^4.0.0
